# FerroDock

./: Cargo.toml  LICENSE.md  README.md
.github/: FUNDING.yml
src/: app.rs  config.rs  events.rs  main.rs  win_api.rs
src/windows/: apps.rs  icons.rs  mod.rs  windows.rs
