[package]
name = "ferro_dock"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.27.2", features = ["persistence"] }
serde = { version = "1.0.*", features = ["derive"] }

[dependencies.windows]
version = "0.56.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
